[gd_scene load_steps=12 format=2]

[ext_resource path="res://player/scene/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Niveles/scripts/Nivel.gd" type="Script" id=2]
[ext_resource path="res://Niveles/scripts/EnemyLoader.gd" type="Script" id=3]
[ext_resource path="res://fire_effect/scene/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://bullet/scene/Bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/scene/GameUi.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/font/bahnschrift.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://enemy/scene/boss/GalaxyBlueBoss_2.tscn" type="PackedScene" id=8]
[ext_resource path="res://environment/scene/decor/Decor.tscn" type="PackedScene" id=9]
[ext_resource path="res://environment/sprite/step_1.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 7 )

[node name="Nivel" type="Node2D"]
script = ExtResource( 2 )
GalaxyBlueBoss_2 = ExtResource( 8 )

[node name="Decor" parent="." instance=ExtResource( 9 )]
_texture = ExtResource( 10 )

[node name="GameTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 180 )
Explosion_Scene = ExtResource( 4 )
BulletScene = ExtResource( 5 )

[node name="EnemyLoader" type="Timer" parent="."]
autostart = true
script = ExtResource( 3 )
_wait_time = 1.0

[node name="RestorePlayer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="GameUI" parent="." instance=ExtResource( 6 )]
anchor_right = 2.0
margin_right = 640.0
margin_bottom = 45.0

[node name="GameOverLabel" type="Label" parent="."]
margin_right = 640.0
margin_bottom = 360.0
custom_colors/font_color = Color( 0.00784314, 0.368627, 0.792157, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "game over"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverDelay" type="Timer" parent="."]
one_shot = true

[node name="BossPosition" type="Position2D" parent="."]
position = Vector2( 750, 180 )

[node name="Change_Level" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="destroy" from="Player" to="." method="_on_Player_destroy"]
[connection signal="timeout" from="EnemyLoader" to="." method="Enemy_Loader_timeout"]
[connection signal="timeout" from="RestorePlayer" to="." method="_on_RestorePlayer_timeout"]
[connection signal="timeout" from="GameOverDelay" to="." method="_on_GameOverDelay_timeout"]
